--- a/Login/login.html
+++ b/Login/login.html
@@ -7,9 +7,9 @@
     <title>LOGIN</title>
   </head>
   <body>
-    
+   <div class="section1">
     <div class="login">
-        <img src="/image/rentease_logo1.png" alt="">
+        <img src="/image/renteaselogo21.png" alt="">
       <h1>Login</h1>
       <form action="" method="post">
         <div class="username">
@@ -36,5 +36,7 @@
       </form>
       <p>Don't have an account? <a href="/register">Sign up</a></p>
     </div>
+    <img src="/image/image 12.png" alt="">
+  </div>
   </body>
 </html>
