--- a/signup/signup.html
+++ b/signup/signup.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/signup/signup.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="/signup/signup.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signup</title>
-</head>
-<body>
-    <div class="signup">
+  </head>
+  <body>
+    <div class="section2">
+      <div class="signup">
+        <img src="/image/renteaselogo21.png" alt="">
         <h1>Sign up</h1>
-        <h4>we need something more</h4>
-        <form action="" method="post">
+        <div class="section">
+          <form action="" method="post">
             <div class="form">
-            <input type="text" name="Fullname" placeholder="Fullname" required>
+              <input
+                type="text"
+                name="Fullname"
+                placeholder="Fullname"
+                required
+              />
+            </div>
+            <div class="form">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <div class="form">
+              <input
+                type="password"
+                name="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <div class="form">
+              <input
+                type="password"
+                name="confirm_password"
+                placeholder="Confirm Password"
+                required
+              />
+            </div>
+            <div class="button">
+              <button type="submit">Submit</button>
+            </div>
+          </form>
+          <p>Already have an account? <a href="/login.html">Login</a></p>
         </div>
-        <div class="form">
-            <input type="email" name="email" placeholder="Email" required>
-        </div>
-        <div class="form">
-            <input type="password" name="password" placeholder="Password" required>
-        </div>
-        <div class="form">
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-        </div>
-           <div class="button">
-            <button>Submit</button>
-        </div>
-        </form>
-        <p>Already have an account? <a href="/login.html">Login</a></p>
-        <p>Forgot Password? <a href="/forgot_password.html">Reset Password</a></p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
