--- a/Login/login.html
+++ b/Login/login.html
@@ -34,7 +34,7 @@
           <button type="submit">Login</button>
         </div>
       </form>
-      <p>Don't have an account? <a href="/register">Sign up</a></p>
+      <p>Don't have an account? <a href="/signup/signup.html">Sign up</a></p>
     </div>
     <img src="/image/image 12.png" alt="">
   </div>
