--- a/signup/signup.html
+++ b/signup/signup.html
@@ -44,7 +44,7 @@
               <button type="submit">Submit</button>
             </div>
           </form>
-          <p>Already have an account? <a href="/login.html">Login</a></p>
+          <p>Already have an account? <a href="/Login/login.html">Login</a></p>
         </div>
       </div>
     </div>
