--- a/Login/login.html
+++ b/Login/login.html
@@ -9,7 +9,7 @@
   <body>
    <div class="section1">
     <div class="login">
-        <img src="/image/renteaselogo21.png" alt="">
+      <a href="/Home/home.html">  <img src="/image/renteaselogo21.png" alt="Logo" /></a>
       <h1>Login</h1>
       <form action="" method="post">
         <div class="username">
