--- a/user.html
+++ b/user.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="navbar">
         <div class="logo">
-          <a href="/Home/home.html">  <img src="/image/renteaselogo21.png" alt="Logo" /></a>
+          <a href="home.html">  <img src="./image/renteaselogo21.png" alt="Logo" /></a>
         </div>
       <div class="options">
         <ul>
