--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,10 @@
       <h1>Admin Dashboard</h1>
     </div>
     <div class="menu">
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="/image/renteaselogo21.png" alt="">
+        <hr>
+      </div>
       <div class="sidebar">
         <div class="options">
           <a href="#properties">Manage Properties</a>
@@ -25,8 +28,10 @@
         <div class="options">
           <a href="#settings">Settings</a>
         </div>
+        <hr>
       </div>
-      <div class="options">
+      <hr>
+      <div class="options1">
       <a href="#logout">Logout</a>
     </div>
   </div>
