--- a/admin.html
+++ b/admin.html
@@ -12,28 +12,27 @@
     </div>
     <div class="menu">
       <div class="logo">
-        <img src="/image/renteaselogo21.png" alt="">
-        <hr>
+       <a href="home.html"> <img src="./image/renteaselogo21.png" alt=""></a>
+        <!-- <hr> -->
       </div>
       <div class="sidebar">
         <div class="options">
+ 
           <a href="#properties">Manage Properties</a>
         </div>
         <div class="options">
           <a href="#landlords">Manage Landlords</a>
         </div>
         <div class="options">
-          <a href="#tenants">Manage Tenants</a>
+  
+          <a href="Tenant.html">Manage Tenants</a>
         </div>
         <div class="options">
-          <a href="#settings">Settings</a>
+
+          <a href="home.html">Log out</a>
         </div>
-        <hr>
+        <!-- <hr> -->
       </div>
-      <hr>
-      <div class="options1">
-      <a href="#logout">Logout</a>
-    </div>
   </div>
 
     <div class="content">
@@ -74,5 +73,20 @@
             <p>Manage rental requests and approve or deny applications.</p>
         </div> -->
     </div>
+
+    <!-- <script>
+      function showSection(sectionId) {
+          // Hide all sections
+          var sections = document.querySelectorAll('.section');
+          sections.forEach(function(section) {
+              section.classList.remove('active');
+          });
+
+          // Show the selected section
+          var selectedSection = document.getElementById(sectionId);
+          selectedSection.classList.add('active');
+      }
+  </script> -->
+ 
   </body>
 </html>
