admin dashboard almost completed

--- a/admin.html
+++ b/admin.html
@@ -21,11 +21,15 @@
           <a href="#properties">Manage Properties</a>
         </div>
         <div class="options">
-          <a href="#landlords">Manage Landlords</a>
+          <a href="Manageowner.php">Manage Landlords</a>
         </div>
         <div class="options">
   
           <a href="Tenant.php" onclick="showSection('manageTenants')">Manage Tenants</a>
+        </div>
+        <div class="options">
+  
+          <a href="Tenant.php" onclick="showSection('manageTenants')">Manage Bookings</a>
         </div>
         <div class="options">
 
