--- a/user.html
+++ b/user.html
@@ -1,36 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rentease - Tenant Dashboard</title>
     <link rel="stylesheet" href="user.css">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-  </head>
-  <body>
-    <nav>
-        <div class="navbar">
-        <div class="logo">
-          <a href="home.html">  <img src="./image/renteaselogo21.png" alt="Logo" /></a>
+</head>
+<body>
+    <div class="header">
+        <!-- <div class="logo">
+            <img src="/image/renteaselogo21.png" alt="Rentease Logo">
         </div>
-      <div class="options">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Properties</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="logout">
-            <button ">Logout</button>
+        <div class="nav">
+            <button class="list-property">List Your Property</button>
+            <div class="menu-icon">&#9776;</div>
+        </div> -->
+        <nav>
+          <div class="navbar">
+          <div class="logo">
+            <a href="">  <img src="./image/renteaselogo21.png" alt="Logo" /></a>
           </div>
+        <div class="options">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Properties</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <div class="logout">
+             <a href="login.php"> <button>Logout</button></a>
+            </div>
+        </div>
       </div>
+      </nav>
     </div>
-    </nav>
-    <div class="section1">
-        <div class="content">
-        <h1>Welcome to</h1>
-        <h2>User Dashboard</h2>
-        <p>Find  your property in just a simple steps, in your hand.</p>
-    </div>
-    </div>
-  </body>
+<div class="hero">
+    <div class="banner">
+        <div class="banner-content">
+            <h1>Find Your Perfect Rental property with  <span>Rentease</span></h1>
+            <p>Connecting Tenants and Landlords Seamlessly with Ease and Trust</p>
+            <!-- <div class="search-form">
+                <div class="search-options">
+                    <button class="option">Full House</button>
+                    <button class="option">Flatmates</button>
+                    <button class="option">Co-Living/PG</button>
+                </div> -->
+                <!-- <div class="search-inputs">
+                    <select class="location">
+                        <option value="Bangalore">Bangalore</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Mumbai">Mumbai</option> -->
+                        <!-- Add more locations as needed -->
+                    <!-- </select>
+                    <input type="text" placeholder="Search Locality" class="locality">
+                    <button class="search-btn">Search</button>
+                </div> -->
+            </div>
+          </div>
+          <div class="stats">
+            <div class="stat-box">
+                <h3>1,00,000+</h3>
+                <p>Houses Rented</p>
+            </div>
+            <div class="stat-box">
+                <h3>2,00,000+</h3>
+                <p>Happy Customers</p>
+            </div>
+            <div class="stat-box">
+                <h3>45,000+</h3>
+                <p>Trusted Owners</p>
+            </div>
+        </div>
+      </div>
+        </div>
+        <div class="section2">
+        <div class="container">
+            <div class="wrapper">
+              <div class="banner-image"> </div>
+              <h1> Toyota Supra</h1>
+              <p>Lorem ipsum dolor sit amet, <br/>
+                consectetur adipiscing elit.</p>
+             </div>
+             <div class="button-wrapper"> 
+             <button class="btn outline">DETAILS</button>
+               <button class="btn fill">BUY NOW</button>
+             </div>
+               </div>
+               <div class="container">
+                <div class="wrapper">
+                  <div class="banner-image"> </div>
+                  <h1> Toyota Supra</h1>
+                  <p>Lorem ipsum dolor sit amet, <br/>
+                    consectetur adipiscing elit.</p>
+                 </div>
+                 <div class="button-wrapper"> 
+                 <button class="btn outline">DETAILS</button>
+                   <button class="btn fill">BUY NOW</button>
+                 </div>
+                   </div>
+               <div class="container">
+                <div class="wrapper">
+                  <div class="banner-image"> </div>
+                  <h1> Toyota Supra</h1>
+                  <p>Lorem ipsum dolor sit amet, <br/>
+                    consectetur adipiscing elit.</p>
+                 </div>
+                 <div class="button-wrapper"> 
+                 <button class="btn outline">DETAILS</button>
+                   <button class="btn fill">BUY NOW</button>
+                 </div>
+                   </div>
+               <div class="container">
+                <div class="wrapper">
+                  <div class="banner-image"> </div>
+                  <h1> Toyota Supra</h1>
+                  <p>Lorem ipsum dolor sit amet, <br/>
+                    consectetur adipiscing elit.</p>
+                 </div>
+                 <div class="button-wrapper"> 
+                 <button class="btn outline">DETAILS</button>
+                   <button class="btn fill">BUY NOW</button>
+                 </div>
+                   </div>
+           </div>
+           
+
+</body>
 </html>
