--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
         </div>
         <div class="options">
   
-          <a href="Tenant.php" onclick="showSection('manageTenants')">Manage Bookings</a>
+          <a href="Tenant.php">Manage Bookings</a>
         </div>
         <div class="options">
 
@@ -89,7 +89,7 @@
             <p>Manage rental requests and approve or deny applications.</p>
         </div> -->
     </div>
- <script>
+ <!-- <script>
       function showSection(sectionId) {
      
           var sections = document.querySelectorAll('.section');
@@ -101,7 +101,7 @@
           var selectedSection = document.getElementById('manageTenants');
           selectedSection.classList.add('active');
       } 
-  </script>
+  </script> -->
  
   </body>
 </html>
