--- a/user.html
+++ b/user.html
@@ -74,54 +74,46 @@
       </div>
         </div>
         <div class="section2">
-        <div class="container">
-            <div class="wrapper">
-              <div class="banner-image"> </div>
-              <h1> Toyota Supra</h1>
-              <p>Lorem ipsum dolor sit amet, <br/>
-                consectetur adipiscing elit.</p>
-             </div>
-             <div class="button-wrapper"> 
-             <button class="btn outline">DETAILS</button>
-               <button class="btn fill">BUY NOW</button>
-             </div>
-               </div>
-               <div class="container">
-                <div class="wrapper">
-                  <div class="banner-image"> </div>
-                  <h1> Toyota Supra</h1>
-                  <p>Lorem ipsum dolor sit amet, <br/>
-                    consectetur adipiscing elit.</p>
-                 </div>
-                 <div class="button-wrapper"> 
-                 <button class="btn outline">DETAILS</button>
-                   <button class="btn fill">BUY NOW</button>
-                 </div>
-                   </div>
-               <div class="container">
-                <div class="wrapper">
-                  <div class="banner-image"> </div>
-                  <h1> Toyota Supra</h1>
-                  <p>Lorem ipsum dolor sit amet, <br/>
-                    consectetur adipiscing elit.</p>
-                 </div>
-                 <div class="button-wrapper"> 
-                 <button class="btn outline">DETAILS</button>
-                   <button class="btn fill">BUY NOW</button>
-                 </div>
-                   </div>
-               <div class="container">
-                <div class="wrapper">
-                  <div class="banner-image"> </div>
-                  <h1> Toyota Supra</h1>
-                  <p>Lorem ipsum dolor sit amet, <br/>
-                    consectetur adipiscing elit.</p>
-                 </div>
-                 <div class="button-wrapper"> 
-                 <button class="btn outline">DETAILS</button>
-                   <button class="btn fill">BUY NOW</button>
-                 </div>
-                   </div>
+          <div class="card">
+            <img src="./image/house 4.jpg" alt="Property Image">
+            <div class="card-content">
+              <h3>Cozy Apartment in the City</h3>
+              <p>2 Bed | 2 Bath | 1200 sqft</p>
+              <p>Location: New York, NY</p>
+              <p class="price">$1500/month</p>
+              <button>View Details</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./image/house1.jpg" alt="Property Image">
+            <div class="card-content">
+              <h3>Cozy Apartment in the City</h3>
+              <p>2 Bed | 2 Bath | 1200 sqft</p>
+              <p>Location: New York, NY</p>
+              <p class="price">$1500/month</p>
+              <button>View Details</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./image/house2.jpg" alt="Property Image">
+            <div class="card-content">
+              <h3>Cozy Apartment in the City</h3>
+              <p>2 Bed | 2 Bath | 1200 sqft</p>
+              <p>Location: New York, NY</p>
+              <p class="price">$1500/month</p>
+              <button>View Details</button>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./image/house3.jpg" alt="Property Image">
+            <div class="card-content">
+              <h3>Cozy Apartment in the City</h3>
+              <p>2 Bed | 2 Bath | 1200 sqft</p>
+              <p>Location: New York, NY</p>
+              <p class="price">$1500/month</p>
+              <button>View Details</button>
+            </div>
+          </div>
            </div>
            
 
