--- a/home.html
+++ b/home.html
@@ -114,5 +114,35 @@
       <a href="signup.php">  <button>Find Your Home</button></a>
     </div>
   </div>
+  <!-- footer.html -->
+<div class="footer">
+  <div class="footer-content">
+    <div class="footer-section about">
+      <h3>About Rentease</h3>
+      <p>Rentease is your trusted platform for finding hostels, PGs, and rental apartments. Our mission is to make renting easier and more accessible for everyone.</p>
+    </div>
+
+    <div class="footer-section links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="terms.html">Terms & Conditions</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section contact">
+      <h3>Contact Us</h3>
+      <p>Email: support@rentease.com</p>
+      <p>Phone: +91 12345 67890</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2024 Rentease. All rights reserved.</p>
+  </div>
+</div>
+
   </body>
 </html>
